--- a/package.json
+++ b/package.json
@@ -18,5 +18,9 @@
   "license": "CC0-1.0",
   "devDependencies": {
     "electron": "^23.2.0"
+  },
+  "dependencies": {
+    "request": "*",
+    "request-promise": "*"
   }
 }
